force-app/main/default/objects/Stock_Check_Item__c/Stock_Check_Item__c.object-meta.xml
<CustomObject>
    <description>Child of Stock Check (BRD 21.15). Available retailer stock per SKU (cases/pieces).</description>
    <label>Stock Check Item</label>
    <nameField>
        <displayFormat>SCI-{000000}</displayFormat>
        <label>Stock Check Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Check Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>