force-app/main/default/objects/Stock_Check_Item__c/fields/Available_Qty_Cases__c.field-meta.xml
<CustomField>
    <fullName>Available_Qty_Cases__c</fullName>
    <label>Available Qty (Cases)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>