force-app/main/default/objects/Stock_Check_Item__c/fields/Product_Ext__c.field-meta.xml
<CustomField>
    <fullName>Product_Ext__c</fullName>
    <description>Existing product master (Product_Extension__c).</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product_Extension__c</referenceTo>
    <relationshipName>Stock_Check_Items</relationshipName>
    <type>Lookup</type>
</CustomField>