force-app/main/default/objects/Stock_Check_Item__c/fields/Stock_Check__c.field-meta.xml
<CustomField>
    <fullName>Stock_Check__c</fullName>
    <label>Stock Check</label>
    <referenceTo>Stock_Check__c</referenceTo>
    <relationshipLabel>Stock Check Items</relationshipLabel>
    <relationshipName>Stock_Check_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>